# src/routes/payments.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import { AuthMiddleware } from '../middleware/auth';
-import { createPayment, getPaymentStatus } from '../controllers/paymentControllers';
+import { createPayment, getPaymentStatus, createCheckoutSession } from '../controllers/paymentControllers';
 import { createOrGetCustomer, listCustomerPaymentMethods, deleteCustomerPaymentMethod, createCustomerSession } from '../controllers/customerControllers';
 import { setupIntents } from '../controllers/setIntentControllers';
 import { createOrganizerAccount, getOrganizerAccountStatus, deleteOrganizerAccount, createOrganizerAccountLink, getOrganizerBalance, getOrganizerPayouts, getOrganizerCharges } from '../controllers/organizerControllers';
@@ -10,6 +10,7 @@ const router = Router();
 // Payments
 router.post('/', AuthMiddleware, createPayment);
 router.get('/:id', AuthMiddleware, getPaymentStatus);
+router.post('/checkout-sessions', AuthMiddleware, createCheckoutSession);
 
 // Customers
 router.post('/customers', AuthMiddleware, createOrGetCustomer);
